Update swagger docs
